Select kernels to be dowloaded

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -34,41 +34,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70cad9c",
+   "id": "b935d060",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_meta_new = \"hyb2_v03.tm\"\n",
-    "if !isfile(path_meta_new)\n",
-    "    # Dowonload files for SPICE\n",
-    "    cmd = `wget -nv -m -np -nH --cut-dirs=3 -R \"index.html*\" --execute robots=off --wait=1 https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle/spice_kernels/`\n",
-    "    run(cmd)\n",
+    "path_kernels = [\n",
+    "    \"spice_kernels/lsk/naif0012.tls\",\n",
+    "    \"spice_kernels/pck/hyb2_ryugu_shape_v20190328.tpc\",\n",
+    "    \"spice_kernels/fk/hyb2_ryugu_v01.tf\",\n",
+    "    \"spice_kernels/spk/2162173_Ryugu.bsp\",\n",
+    "]\n",
     "\n",
-    "    # Update path\n",
-    "    path_meta_old = \"spice_kernels/mk/hyb2_v03.tm\"\n",
-    "    path_meta_new = \"hyb2_v03.tm\"\n",
-    "    cp(path_meta_old, path_meta_new, force=true)\n",
-    "    script = read(path_meta_new, String)\n",
-    "    max_length = 79\n",
-    "    subpaths = String[]\n",
-    "    path_kernel = abspath(\"spice_kernels\")\n",
-    "    i = firstindex(path_kernel)\n",
-    "    for _ in 1:(255 ÷ max_length)\n",
-    "        if i + max_length < lastindex(path_kernel)\n",
-    "            j = prevind(path_kernel, i + max_length)\n",
-    "        else\n",
-    "            j = lastindex(path_kernel)\n",
-    "        end\n",
-    "        push!(subpaths, path_kernel[i:j])\n",
-    "        i = nextind(path_kernel, j)\n",
-    "        if lastindex(path_kernel) < i\n",
-    "            break\n",
-    "        end\n",
-    "    end\n",
-    "    script = replace(script, \"PATH_VALUES     = ( '..'      )\"=>\"PATH_VALUES = ('$(join(subpaths, \"+'\\n'\"))')\")\n",
-    "    write(path_meta_new, script)\n",
-    "end\n",
-    "\n",
+    "for path_kernel in path_kernels\n",
+    "    mkpath(dirname(path_kernel))\n",
+    "    url_kernel = joinpath(\"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle\", path_kernel)\n",
+    "    isfile(path_kernel) || Downloads.download(url_kernel, path_kernel)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2cf7d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "path_obj = \"SHAPE_SFM_49k_v20180804.obj\"\n",
     "if !isfile(path_obj)\n",
     "    url_obj = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/paper/Watanabe_2019/SHAPE_SFM_49k_v20180804.obj\"\n",
@@ -91,7 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPICE.furnsh(path_meta_new)\n",
+    "for path_kernel in path_kernels\n",
+    "    SPICE.furnsh(path_kernel)\n",
+    "end\n",
+    "\n",
     "et_start = SPICE.utc2et(\"2018-07-01T00:00:00\")\n",
     "et_end   = SPICE.utc2et(\"2018-07-02T00:00:00\")\n",
     "step     = 76.3262  # Rotation of 1 deg\n",
@@ -264,15 +257,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.7.3",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.7.3"
   }
  },
  "nbformat": 4,
