Select kernels to be dowloaded

--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -37,37 +37,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60cdf6b6",
+   "id": "6dc5074a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_meta_new = \"hera_study_PO_EMA_2024.tm\"\n",
-    "if !isfile(path_meta_new)\n",
-    "    # Dowonload files for SPICE\n",
-    "    run(Git.git([\"clone\", \"https://s2e2.cosmos.esa.int/bitbucket/scm/spice_kernels/hera.git\"]))\n",
+    "path_kernels = [\n",
+    "    \"kernels/fk/hera_v07.tf\",\n",
+    "    \"kernels/lsk/naif0012.tls\",\n",
+    "    \"kernels/pck/hera_didymos_v05.tpc\",\n",
+    "    \"kernels/spk/de432s.bsp\",\n",
+    "    \"kernels/spk/didymos_hor_000101_500101_v01.bsp\",\n",
+    "    \"kernels/spk/didymos_gmv_260901_311001_v01.bsp\",\n",
+    "    \"kernels/dsk/g_50677mm_rad_obj_dida_0000n00000_v001.obj.txt\",\n",
+    "    \"kernels/dsk/g_06650mm_rad_obj_didb_0000n00000_v001.obj\",\n",
+    "]\n",
     "\n",
-    "    # Update path\n",
-    "    path_meta_old = \"hera/kernels/mk/hera_study_PO_EMA_2024.tm\"\n",
-    "    cp(path_meta_old, path_meta_new, force=true)\n",
-    "    script = read(path_meta_new, String)\n",
-    "    max_length = 79\n",
-    "    subpaths = String[]\n",
-    "    path_kernel = abspath(joinpath(\"hera\", \"kernels\"))\n",
-    "    i = firstindex(path_kernel)\n",
-    "    for _ in 1:(255 ÷ max_length)\n",
-    "        if i + max_length < lastindex(path_kernel)\n",
-    "            j = prevind(path_kernel, i + max_length)\n",
-    "        else\n",
-    "            j = lastindex(path_kernel)\n",
-    "        end\n",
-    "        push!(subpaths, path_kernel[i:j])\n",
-    "        i = nextind(path_kernel, j)\n",
-    "        if lastindex(path_kernel) < i\n",
-    "            break\n",
-    "        end\n",
-    "    end\n",
-    "    script = replace(script, \"PATH_VALUES       = ( '..' )\"=>\"PATH_VALUES = ('$(join(subpaths, \"+'\\n'\"))')\")\n",
-    "    write(path_meta_new, script)\n",
+    "for path_kernel in path_kernels\n",
+    "    mkpath(dirname(path_kernel))\n",
+    "    url_kernel = joinpath(\"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/browse\", path_kernel)\n",
+    "    isfile(path_kernel) || Downloads.download(url_kernel, path_kernel)\n",
     "end"
    ]
   },
@@ -86,7 +74,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPICE.furnsh(path_meta_new)\n",
+    "# SPICE.furnsh(\"hera_study_PO_EMA_2024.tm\")\n",
+    "\n",
+    "for path_kernel in path_kernels\n",
+    "    SPICE.furnsh(path_kernel)\n",
+    "    println(path_kernel)\n",
+    "end\n",
+    "\n",
     "et_start = SPICE.utc2et(\"2027-02-18T00:00:00\")\n",
     "et_end   = SPICE.utc2et(\"2027-02-19T00:00:00\")\n",
     "step     = 300\n",
@@ -111,6 +105,7 @@
     "D2_TO_D1 = [SPICE.pxform(\"DIMORPHOS_FIXED\", \"DIDYMOS_FIXED\", et) for et in et_range]\n",
     "D1_TO_J2000 = [SPICE.pxform(\"DIDYMOS_FIXED\", \"J2000\", et) for et in et_range]\n",
     "D2_TO_J2000 = [SPICE.pxform(\"DIMORPHOS_FIXED\", \"J2000\", et) for et in et_range]\n",
+    "\n",
     "SPICE.kclear()"
    ]
   },
@@ -129,19 +124,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_shape1_obj = \"g_50677mm_rad_obj_dida_0000n00000_v001.obj\"\n",
-    "path_shape2_obj = \"g_06650mm_rad_obj_didb_0000n00000_v001.obj\"\n",
-    "path_shape1_jld = \"g_50677mm_rad_obj_dida_0000n00000_v001.jld2\"\n",
-    "path_shape2_jld = \"g_06650mm_rad_obj_didb_0000n00000_v001.jld2\"\n",
+    "path_shape1_obj = \"shape/g_50677mm_rad_obj_dida_0000n00000_v001.obj\"\n",
+    "path_shape2_obj = \"shape/g_06650mm_rad_obj_didb_0000n00000_v001.obj\"\n",
+    "path_shape1_jld = \"shape/g_50677mm_rad_obj_dida_0000n00000_v001.jld2\"\n",
+    "path_shape2_jld = \"shape/g_06650mm_rad_obj_didb_0000n00000_v001.jld2\"\n",
     "\n",
-    "cp(joinpath(\"hera\", \"kernels\", \"dsk\", \"g_50677mm_rad_obj_dida_0000n00000_v001.obj\"), path_shape1_obj, force=true)\n",
-    "cp(joinpath(\"hera\", \"kernels\", \"dsk\", \"g_06650mm_rad_obj_didb_0000n00000_v001.obj\"), path_shape2_obj, force=true)\n",
+    "mkpath(\"shape\")\n",
+    "cp(path_kernels[7], path_shape1_obj, force=true)\n",
+    "cp(path_kernels[8], path_shape2_obj, force=true)\n",
     "\n",
     "if isfile(path_shape1_jld)\n",
     "    shape1 = ThermoPhysicalModeling.ShapeModel(path_shape1_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
     "    shape1 = ThermoPhysicalModeling.ShapeModel(path_shape1_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "end\n",
+    "\n",
     "if isfile(path_shape2_jld)\n",
     "    shape2 = ThermoPhysicalModeling.ShapeModel(path_shape2_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
