--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -48,7 +48,7 @@
     "    \"kernels/spk/de432s.bsp\",\n",
     "    \"kernels/spk/didymos_hor_000101_500101_v01.bsp\",\n",
     "    \"kernels/spk/didymos_gmv_260901_311001_v01.bsp\",\n",
-    "    \"kernels/dsk/g_50677mm_rad_obj_dida_0000n00000_v001.obj.txt\",\n",
+    "    \"kernels/dsk/g_50677mm_rad_obj_dida_0000n00000_v001.obj\",\n",
     "    \"kernels/dsk/g_06650mm_rad_obj_didb_0000n00000_v001.obj\",\n",
     "]\n",
     "\n",
