--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "for path_kernel in path_kernels\n",
     "    mkpath(dirname(path_kernel))\n",
-    "    url_kernel = joinpath(\"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw\", path_kernel)\n",
+    "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/$(path_kernel)\"\n",
     "    isfile(path_kernel) || Downloads.download(url_kernel, path_kernel)\n",
     "end"
    ]
