remove joinpath for url in TOM_Ryugu.ipynb

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "for path_kernel in path_kernels\n",
     "    mkpath(dirname(path_kernel))\n",
-    "    url_kernel = joinpath(\"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle\", path_kernel)\n",
+    "    url_kernel = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle/$(path_kernel)\"\n",
     "    isfile(path_kernel) || Downloads.download(url_kernel, path_kernel)\n",
     "end"
    ]
