--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ThermoPhysicalModeling\n",
+    "import AsteroidThermoPhysicalModels\n",
     "import GLMakie\n",
     "import JLD2\n",
     "import SPICE\n",
@@ -131,15 +131,15 @@
     "cp(path_kernels[8], path_shape2_obj, force=true)\n",
     "\n",
     "if isfile(path_shape1_jld)\n",
-    "    shape1 = ThermoPhysicalModeling.ShapeModel(path_shape1_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape1 = AsteroidThermoPhysicalModels.ShapeModel(path_shape1_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
-    "    shape1 = ThermoPhysicalModeling.ShapeModel(path_shape1_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape1 = AsteroidThermoPhysicalModels.ShapeModel(path_shape1_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "end\n",
     "\n",
     "if isfile(path_shape2_jld)\n",
-    "    shape2 = ThermoPhysicalModeling.ShapeModel(path_shape2_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape2 = AsteroidThermoPhysicalModels.ShapeModel(path_shape2_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
-    "    shape2 = ThermoPhysicalModeling.ShapeModel(path_shape2_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape2 = AsteroidThermoPhysicalModels.ShapeModel(path_shape2_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "end"
    ]
   },
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_params = ThermoPhysicalModeling.ThermoParams(  # [Michel+2016; Naidu+2020]\n",
+    "thermo_params = AsteroidThermoPhysicalModels.ThermoParams(  # [Michel+2016; Naidu+2020]\n",
     "    A_B   = 0.059,  # Bolometric Bond albedo\n",
     "    A_TH  = 0.0,\n",
     "    k     = 0.125,\n",
@@ -170,7 +170,7 @@
     "    Nt    = length(et_range),\n",
     "    z_max = 0.6,\n",
     "    Nz    = 41,\n",
-    "    P     = SPICE.convrt(ThermoPhysicalModeling.DIDYMOS[:P], \"hours\", \"seconds\"),\n",
+    "    P     = SPICE.convrt(AsteroidThermoPhysicalModels.DIDYMOS[:P], \"hours\", \"seconds\"),\n",
     ");"
    ]
   },
@@ -181,14 +181,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ThermoPhysicalModeling.init_temps_zero!(shape1, thermo_params)\n",
-    "ThermoPhysicalModeling.init_temps_zero!(shape2, thermo_params)\n",
+    "AsteroidThermoPhysicalModels.init_temps_zero!(shape1, thermo_params)\n",
+    "AsteroidThermoPhysicalModels.init_temps_zero!(shape2, thermo_params)\n",
     "\n",
     "# Run TPM and save the result\n",
     "savepath = \"TPM_Didymos.jld2\"\n",
     "shapes = (shape1, shape2)\n",
     "suns = (sun_d1, sun_d2)\n",
-    "ThermoPhysicalModeling.run_TPM!(shapes, et_range, suns, D2_TO_D1, d2_d1, thermo_params, savepath, [:surf_temps, :forces, :torques])"
+    "AsteroidThermoPhysicalModels.run_TPM!(shapes, et_range, suns, D2_TO_D1, d2_d1, thermo_params, savepath, [:surf_temps, :forces, :torques])"
    ]
   },
   {
@@ -206,10 +206,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latitude(facet::ThermoPhysicalModeling.Facet) = latitude(facet.center)\n",
+    "latitude(facet::AsteroidThermoPhysicalModels.Facet) = latitude(facet.center)\n",
     "latitude(r) = asin(r[3] / norm(r))\n",
     "\n",
-    "longitude(facet::ThermoPhysicalModeling.Facet) = longitude(facet.center)\n",
+    "longitude(facet::AsteroidThermoPhysicalModels.Facet) = longitude(facet.center)\n",
     "longitude(r) = atan(r[2], r[1])\n",
     "\n",
     "\"\"\"\n",
@@ -242,8 +242,8 @@
     "\n",
     "Make temperature maps of a binary asteroid, `shape1` and `shape2`.\n",
     "\"\"\"\n",
-    "function temperature_map(shape1::ThermoPhysicalModeling.ShapeModel, shape2::ThermoPhysicalModeling.ShapeModel;\n",
-    "    temps1=ThermoPhysicalModeling.surface_temperature(shape1), temps2=ThermoPhysicalModeling.surface_temperature(shape2),\n",
+    "function temperature_map(shape1::AsteroidThermoPhysicalModels.ShapeModel, shape2::AsteroidThermoPhysicalModels.ShapeModel;\n",
+    "    temps1=AsteroidThermoPhysicalModels.surface_temperature(shape1), temps2=AsteroidThermoPhysicalModels.surface_temperature(shape2),\n",
     "    colormap=:hot, colorrange=extrema(vcat(temps1, temps2)),\n",
     "    draw_contour=true, nlevels=15, ticks=0:20:5000,\n",
     "    filepath=\"temp_maps.pdf\", titles=(\"\", \"\"),\n",
