--- a/TPM_Kanamaru2021/TPM_Kanamaru2021.ipynb
+++ b/TPM_Kanamaru2021/TPM_Kanamaru2021.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ThermoPhysicalModeling\n",
+    "import AsteroidThermoPhysicalModels\n",
     "import Downloads\n",
     "using StaticArrays\n",
     "using LinearAlgebra"
@@ -65,10 +65,10 @@
    "source": [
     "path_jld = splitext(path_obj)[1]*\".jld2\"\n",
     "if isfile(path_jld)\n",
-    "    shape = ThermoPhysicalModeling.ShapeModel(path_jld)\n",
+    "    shape = AsteroidThermoPhysicalModels.ShapeModel(path_jld)\n",
     "    println(\"A preprocessed shape file was loaded ($path_jld).\")\n",
     "else\n",
-    "    shape = ThermoPhysicalModeling.ShapeModel(path_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape = AsteroidThermoPhysicalModels.ShapeModel(path_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "    println(\"An OBJ shape file was loaded ($path_obj).\")\n",
     "end"
    ]
@@ -103,7 +103,7 @@
     "# Return\n",
     "- `F☉` : solar irradiation [W/m^2]\n",
     "\"\"\"\n",
-    "solar_irradiation(rₕ) = ThermoPhysicalModeling.SOLAR_CONST / (rₕ / ThermoPhysicalModeling.AU)^2\n",
+    "solar_irradiation(rₕ) = AsteroidThermoPhysicalModels.SOLAR_CONST / (rₕ / AsteroidThermoPhysicalModels.AU)^2\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -121,14 +121,14 @@
     "- `r̂☉` : solar direction in the body-fixed frame\n",
     "\"\"\"\n",
     "function solar_condition(orbit, spin, time)\n",
-    "    u = ThermoPhysicalModeling.solveKeplerEquation2(orbit, time)\n",
-    "    r = ThermoPhysicalModeling.get_r(orbit, u)\n",
+    "    u = AsteroidThermoPhysicalModels.solveKeplerEquation2(orbit, time)\n",
+    "    r = AsteroidThermoPhysicalModels.get_r(orbit, u)\n",
     "    F☉ = solar_irradiation(norm(r))\n",
     "\n",
     "    r̂☉ = normalize(r) * -1  # Shift the origin from the sun to the body\n",
     "\n",
     "    spin_phase = spin.ω * time\n",
-    "    r̂☉ = ThermoPhysicalModeling.orbit_to_body(r̂☉, spin.γ, spin.ε, spin_phase)\n",
+    "    r̂☉ = AsteroidThermoPhysicalModels.orbit_to_body(r̂☉, spin.γ, spin.ε, spin_phase)\n",
     "\n",
     "    F☉, r̂☉\n",
     "end\n",
@@ -151,14 +151,14 @@
     "    for facet in shape.facets\n",
     "        Ψ = facet.normal ⋅ r̂☉  # cosine of the Sun illumination angle\n",
     "        if Ψ > 0  # daytime hemisphere of the body\n",
-    "            if ThermoPhysicalModeling.isIlluminated(facet, r̂☉, shape.facets)\n",
+    "            if AsteroidThermoPhysicalModels.isIlluminated(facet, r̂☉, shape.facets)\n",
     "                df = Ψ * facet.area * facet.normal  # force on each facet\n",
     "                dτ = facet.center × df              # torque on each facet\n",
     "                τ .+= dτ\n",
     "            end\n",
     "        end\n",
     "    end\n",
-    "    τ *= - 2/3 * F☉ / ThermoPhysicalModeling.c₀\n",
+    "    τ *= - 2/3 * F☉ / AsteroidThermoPhysicalModels.c₀\n",
     "    return SVector(τ)\n",
     "end\n",
     "\n",
@@ -175,7 +175,7 @@
     "        spin_phase = spin.ω * time\n",
     "        F☉, r̂☉ = solar_condition(orbit, spin, time)\n",
     "        τ = sum_torque_over_surface(shape, F☉, r̂☉)\n",
-    "        τ = ThermoPhysicalModeling.body_to_orbit(τ, spin.γ, spin.ε, spin_phase)\n",
+    "        τ = AsteroidThermoPhysicalModels.body_to_orbit(τ, spin.γ, spin.ε, spin_phase)\n",
     "\n",
     "        τ̄ .+= τ\n",
     "    end\n",
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orbit = ThermoPhysicalModeling.OrbitalElements(ThermoPhysicalModeling.RYUGU)"
+    "orbit = AsteroidThermoPhysicalModels.OrbitalElements(AsteroidThermoPhysicalModels.RYUGU)"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spin = ThermoPhysicalModeling.SpinParams(ThermoPhysicalModeling.RYUGU, orbit)"
+    "spin = AsteroidThermoPhysicalModels.SpinParams(AsteroidThermoPhysicalModels.RYUGU, orbit)"
    ]
   },
   {
@@ -237,9 +237,9 @@
     "MOI = 4.039541372643629e16  # Moment of inertia of Ryugu\n",
     "\n",
     "## Orbitally averaged torque [N ⋅ m]\n",
-    "τ̄_ω = ThermoPhysicalModeling.getτω(τ̄, spin)\n",
-    "τ̄_ε = ThermoPhysicalModeling.getτε(τ̄, spin)\n",
-    "τ̄_ψ = ThermoPhysicalModeling.getτψ(τ̄, spin)\n",
+    "τ̄_ω = AsteroidThermoPhysicalModels.getτω(τ̄, spin)\n",
+    "τ̄_ε = AsteroidThermoPhysicalModels.getτε(τ̄, spin)\n",
+    "τ̄_ψ = AsteroidThermoPhysicalModels.getτψ(τ̄, spin)\n",
     "\n",
     "## Acceleration rate [rad/sec/sec]\n",
     "ω̇  = τ̄_ω / MOI\n",
