--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -59,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_obj = \"SHAPE_SFM_49k_v20180804.obj\"\n",
+    "mkpath(\"shape\")\n",
+    "path_obj = \"shape/SHAPE_SFM_49k_v20180804.obj\"\n",
     "if !isfile(path_obj)\n",
     "    url_obj = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/paper/Watanabe_2019/SHAPE_SFM_49k_v20180804.obj\"\n",
     "    Downloads.download(url_obj, path_obj)\n",
