--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "for path_kernel in paths_kernel\n",
     "    url_kernel = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle/spice_kernels/$(path_kernel)\"\n",
-    "    filepath = joinpath(\"Ryugu\", \"kernels\", path_kernel)\n",
+    "    filepath = joinpath(\"Ryugu\", \"kernel\", path_kernel)\n",
     "    mkpath(dirname(filepath))\n",
     "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
     "end\n",
