--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -50,19 +50,19 @@
     "    \"spk/didymos_gmv_260901_311001_v01.bsp\",\n",
     "]\n",
     "paths_shape = [\n",
-    "    \"dsk/g_50677mm_rad_obj_dida_0000n00000_v001.obj\",\n",
-    "    \"dsk/g_06650mm_rad_obj_didb_0000n00000_v001.obj\",\n",
+    "    \"g_50677mm_rad_obj_dida_0000n00000_v001.obj\",\n",
+    "    \"g_06650mm_rad_obj_didb_0000n00000_v001.obj\",\n",
     "]\n",
     "\n",
     "for path_kernel in paths_kernel\n",
     "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/kernels/$(path_kernel)\"\n",
-    "    filepath = joinpath(\"Didymos\", \"kernel\", path_kernel)\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
     "    mkpath(dirname(filepath))\n",
     "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
     "end\n",
     "for path_shape in paths_shape\n",
-    "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/kernels/$(path_shape)\"\n",
-    "    filepath = joinpath(\"Didymos\", \"shape\", path_shape)\n",
+    "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/kernels/dsk/$(path_shape)\"\n",
+    "    filepath = joinpath(\"shape\", path_shape)\n",
     "    mkpath(dirname(filepath))\n",
     "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
     "end"
@@ -130,10 +130,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_shape1_obj = \"Didymos/shape/dsk/g_50677mm_rad_obj_dida_0000n00000_v001.obj\"\n",
-    "path_shape2_obj = \"Didymos/shape/dsk/g_06650mm_rad_obj_didb_0000n00000_v001.obj\"\n",
-    "path_shape1_jld = \"Didymos/shape/dsk/g_50677mm_rad_obj_dida_0000n00000_v001.jld2\"\n",
-    "path_shape2_jld = \"Didymos/shape/dsk/g_06650mm_rad_obj_didb_0000n00000_v001.jld2\"\n",
+    "path_shape1_obj = joinpath(\"shape\", \"g_50677mm_rad_obj_dida_0000n00000_v001.obj\")\n",
+    "path_shape2_obj = joinpath(\"shape\", \"g_06650mm_rad_obj_didb_0000n00000_v001.obj\")\n",
+    "path_shape1_jld = joinpath(\"shape\", \"g_50677mm_rad_obj_dida_0000n00000_v001.jld2\")\n",
+    "path_shape2_jld = joinpath(\"shape\", \"g_06650mm_rad_obj_didb_0000n00000_v001.jld2\")\n",
     "\n",
     "if isfile(path_shape1_jld)\n",
     "    shape1 = AsteroidThermoPhysicalModels.ShapeModel(path_shape1_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
