--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -50,13 +50,13 @@
     "\n",
     "for path_kernel in paths_kernel\n",
     "    url_kernel = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle/spice_kernels/$(path_kernel)\"\n",
-    "    filepath = joinpath(\"Ryugu\", \"kernel\", path_kernel)\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
     "    mkpath(dirname(filepath))\n",
     "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
     "end\n",
     "for path_shape in paths_shape\n",
     "    url_shape = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/paper/Watanabe_2019/$(path_shape)\"\n",
-    "    filepath = joinpath(\"Ryugu\", \"shape\", path_shape)\n",
+    "    filepath = joinpath(\"shape\", path_shape)\n",
     "    mkpath(dirname(filepath))\n",
     "    isfile(filepath) || Downloads.download(url_shape, filepath)\n",
     "end"
@@ -78,11 +78,11 @@
    "outputs": [],
    "source": [
     "for path_kernel in paths_kernel\n",
-    "    filepath = joinpath(\"Ryugu\", \"kernels\", path_kernel)\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
     "    SPICE.furnsh(filepath)\n",
     "end\n",
     "et_start = SPICE.utc2et(\"2018-07-01T00:00:00\")\n",
-    "et_end   = SPICE.utc2et(\"2018-07-02T00:00:00\")\n",
+    "et_end   = SPICE.utc2et(\"2018-07-01T01:00:00\")\n",
     "step     = 76.3262  # Rotation of 1 deg\n",
     "et_range = et_start : step : et_end\n",
     "@show et_range\n",
@@ -117,8 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_obj = \"Ryugu/shape/SHAPE_SFM_49k_v20180804.obj\"\n",
-    "path_jld = \"Ryugu/shape/SHAPE_SFM_49k_v20180804.jld2\"\n",
+    "path_obj = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.obj\")\n",
+    "path_jld = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.jld2\")\n",
     "if isfile(path_jld)\n",
     "    shape = AsteroidThermoPhysicalModels.ShapeModel(path_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
