--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -41,21 +41,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_kernels = [\n",
-    "    \"kernels/fk/hera_v07.tf\",\n",
-    "    \"kernels/lsk/naif0012.tls\",\n",
-    "    \"kernels/pck/hera_didymos_v05.tpc\",\n",
-    "    \"kernels/spk/de432s.bsp\",\n",
-    "    \"kernels/spk/didymos_hor_000101_500101_v01.bsp\",\n",
-    "    \"kernels/spk/didymos_gmv_260901_311001_v01.bsp\",\n",
-    "    \"kernels/dsk/g_50677mm_rad_obj_dida_0000n00000_v001.obj\",\n",
-    "    \"kernels/dsk/g_06650mm_rad_obj_didb_0000n00000_v001.obj\",\n",
+    "paths_kernel = [\n",
+    "    \"fk/hera_v07.tf\",\n",
+    "    \"lsk/naif0012.tls\",\n",
+    "    \"pck/hera_didymos_v05.tpc\",\n",
+    "    \"spk/de432s.bsp\",\n",
+    "    \"spk/didymos_hor_000101_500101_v01.bsp\",\n",
+    "    \"spk/didymos_gmv_260901_311001_v01.bsp\",\n",
+    "]\n",
+    "paths_shape = [\n",
+    "    \"g_50677mm_rad_obj_dida_0000n00000_v001.obj\",\n",
+    "    \"g_06650mm_rad_obj_didb_0000n00000_v001.obj\",\n",
     "]\n",
     "\n",
-    "for path_kernel in path_kernels\n",
-    "    mkpath(dirname(path_kernel))\n",
-    "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/$(path_kernel)\"\n",
-    "    isfile(path_kernel) || Downloads.download(url_kernel, path_kernel)\n",
+    "for path_kernel in paths_kernel\n",
+    "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/kernels/$(path_kernel)\"\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
+    "    mkpath(dirname(filepath))\n",
+    "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
+    "end\n",
+    "for path_shape in paths_shape\n",
+    "    url_kernel = \"https://s2e2.cosmos.esa.int/bitbucket/projects/SPICE_KERNELS/repos/hera/raw/kernels/dsk/$(path_shape)\"\n",
+    "    filepath = joinpath(\"shape\", path_shape)\n",
+    "    mkpath(dirname(filepath))\n",
+    "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
     "end"
    ]
   },
@@ -74,10 +83,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for path_kernel in path_kernels\n",
-    "    SPICE.furnsh(path_kernel)\n",
+    "for path_kernel in paths_kernel\n",
+    "    filepath = joinpath(\"Didymos\", \"kernel\", path_kernel)\n",
+    "    SPICE.furnsh(filepath)\n",
     "end\n",
-    "\n",
     "et_start = SPICE.utc2et(\"2027-02-18T00:00:00\")\n",
     "et_end   = SPICE.utc2et(\"2027-02-19T00:00:00\")\n",
     "step     = 300\n",
@@ -121,21 +130,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_shape1_obj = \"shape/g_50677mm_rad_obj_dida_0000n00000_v001.obj\"\n",
-    "path_shape2_obj = \"shape/g_06650mm_rad_obj_didb_0000n00000_v001.obj\"\n",
-    "path_shape1_jld = \"shape/g_50677mm_rad_obj_dida_0000n00000_v001.jld2\"\n",
-    "path_shape2_jld = \"shape/g_06650mm_rad_obj_didb_0000n00000_v001.jld2\"\n",
-    "\n",
-    "mkpath(\"shape\")\n",
-    "cp(path_kernels[7], path_shape1_obj, force=true)\n",
-    "cp(path_kernels[8], path_shape2_obj, force=true)\n",
+    "path_shape1_obj = joinpath(\"shape\", \"g_50677mm_rad_obj_dida_0000n00000_v001.obj\")\n",
+    "path_shape2_obj = joinpath(\"shape\", \"g_06650mm_rad_obj_didb_0000n00000_v001.obj\")\n",
+    "path_shape1_jld = joinpath(\"shape\", \"g_50677mm_rad_obj_dida_0000n00000_v001.jld2\")\n",
+    "path_shape2_jld = joinpath(\"shape\", \"g_06650mm_rad_obj_didb_0000n00000_v001.jld2\")\n",
     "\n",
     "if isfile(path_shape1_jld)\n",
     "    shape1 = AsteroidThermoPhysicalModels.ShapeModel(path_shape1_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
     "    shape1 = AsteroidThermoPhysicalModels.ShapeModel(path_shape1_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "end\n",
-    "\n",
     "if isfile(path_shape2_jld)\n",
     "    shape2 = AsteroidThermoPhysicalModels.ShapeModel(path_shape2_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
