--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -38,32 +38,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_kernels = [\n",
-    "    \"spice_kernels/lsk/naif0012.tls\",\n",
-    "    \"spice_kernels/pck/hyb2_ryugu_shape_v20190328.tpc\",\n",
-    "    \"spice_kernels/fk/hyb2_ryugu_v01.tf\",\n",
-    "    \"spice_kernels/spk/2162173_Ryugu.bsp\",\n",
+    "paths_kernel = [\n",
+    "    \"lsk/naif0012.tls\",\n",
+    "    \"pck/hyb2_ryugu_shape_v20190328.tpc\",\n",
+    "    \"fk/hyb2_ryugu_v01.tf\",\n",
+    "    \"spk/2162173_Ryugu.bsp\",\n",
+    "]\n",
+    "paths_shape = [\n",
+    "    \"SHAPE_SFM_49k_v20180804.obj\",\n",
     "]\n",
     "\n",
-    "for path_kernel in path_kernels\n",
-    "    mkpath(dirname(path_kernel))\n",
-    "    url_kernel = joinpath(\"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle\", path_kernel)\n",
-    "    isfile(path_kernel) || Downloads.download(url_kernel, path_kernel)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2cf7d8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mkpath(\"shape\")\n",
-    "path_obj = \"shape/SHAPE_SFM_49k_v20180804.obj\"\n",
-    "if !isfile(path_obj)\n",
-    "    url_obj = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/paper/Watanabe_2019/SHAPE_SFM_49k_v20180804.obj\"\n",
-    "    Downloads.download(url_obj, path_obj)\n",
+    "for path_kernel in paths_kernel\n",
+    "    url_kernel = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/spice_bundle/spice_kernels/$(path_kernel)\"\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
+    "    mkpath(dirname(filepath))\n",
+    "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
+    "end\n",
+    "for path_shape in paths_shape\n",
+    "    url_shape = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/paper/Watanabe_2019/$(path_shape)\"\n",
+    "    filepath = joinpath(\"shape\", path_shape)\n",
+    "    mkpath(dirname(filepath))\n",
+    "    isfile(filepath) || Downloads.download(url_shape, filepath)\n",
     "end"
    ]
   },
@@ -82,12 +77,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for path_kernel in path_kernels\n",
-    "    SPICE.furnsh(path_kernel)\n",
+    "for path_kernel in paths_kernel\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
+    "    SPICE.furnsh(filepath)\n",
     "end\n",
-    "\n",
     "et_start = SPICE.utc2et(\"2018-07-01T00:00:00\")\n",
-    "et_end   = SPICE.utc2et(\"2018-07-02T00:00:00\")\n",
+    "et_end   = SPICE.utc2et(\"2018-07-01T01:00:00\")\n",
     "step     = 76.3262  # Rotation of 1 deg\n",
     "et_range = et_start : step : et_end\n",
     "@show et_range\n",
@@ -122,7 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_jld = splitext(path_obj)[1]*\".jld2\"\n",
+    "path_obj = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.obj\")\n",
+    "path_jld = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.jld2\")\n",
     "if isfile(path_jld)\n",
     "    shape = AsteroidThermoPhysicalModels.ShapeModel(path_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
@@ -258,15 +254,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.3",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.3"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
