--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "for path_kernel in paths_kernel\n",
-    "    filepath = joinpath(\"Didymos\", \"kernel\", path_kernel)\n",
+    "    filepath = joinpath(\"kernel\", path_kernel)\n",
     "    SPICE.furnsh(filepath)\n",
     "end\n",
     "et_start = SPICE.utc2et(\"2027-02-18T00:00:00\")\n",
