Nake an output directory

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -335,7 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirpath = \"./\"\n",
+    "dirpath = \"./output\"\n",
+    "mkpath(dirpath)\n",
     "AsteroidThermoPhysicalModels.export_TPM_results(dirpath, result)"
    ]
   },
