--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -402,7 +402,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirpath = \"./\"\n",
+    "dirpath = \"./output\"\n",
+    "mkpath(dirpath)\n",
     "AsteroidThermoPhysicalModels.export_TPM_results(dirpath, result)"
    ]
   },
